Added StockLedger button in WardPharmacy
TODO: not need to add translations for reports "multi", remember to remove existing from Transifex settings

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -841,6 +841,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <اختر جناح>
 angal.medicalstockward.sex                                                       = جنس
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = الأستاذ الأسهم
 angal.medicalstockward.title                                                     = جناح الصيدلية
 angal.medicalstockward.to                                                        = إلى
 angal.medicalstockward.units                                                     = Units
