--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -836,6 +836,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <bitte wählen Sie eine Station>
 angal.medicalstockward.sex                                                       = Geschlecht
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = Lagerbuch
 angal.medicalstockward.title                                                     = WardPharmacy
 angal.medicalstockward.to                                                        = To
 angal.medicalstockward.units                                                     = Units
