--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -895,6 +895,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <select a ward>
 angal.medicalstockward.sex                                                       = Sex
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = Stock Ledger
 angal.medicalstockward.title                                                     = WardPharmacy
 angal.medicalstockward.to                                                        = To
 angal.medicalstockward.units                                                     = Units
