--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -837,6 +837,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <seleccionar un reparto>
 angal.medicalstockward.sex                                                       = Sexo
 angal.medicalstockward.stockcard                                                 = Tarjeta de existencias
+angal.medicalstockward.stockledger                                               = Registro de acciones
 angal.medicalstockward.title                                                     = Farmacia de Reparto
 angal.medicalstockward.to                                                        = A
 angal.medicalstockward.units                                                     = Unidades
