--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -895,6 +895,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <selezionare un reparto>
 angal.medicalstockward.sex                                                       = Sesso
 angal.medicalstockward.stockcard                                                 = Movimenti
+angal.medicalstockward.stockledger                                               = Registro di Magazzino
 angal.medicalstockward.title                                                     = Farmacia di Reparto
 angal.medicalstockward.to                                                        = A
 angal.medicalstockward.units                                                     = Unità
