--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -834,6 +834,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <selecione uma ala>
 angal.medicalstockward.sex                                                       = Sexo
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = Livro razão
 angal.medicalstockward.title                                                     = WardPharmacy
 angal.medicalstockward.to                                                        = Para
 angal.medicalstockward.units                                                     = Unidades
