--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -834,6 +834,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <chagua iadara>
 angal.medicalstockward.sex                                                       = Jinsia
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = Ledger ya hisa
 angal.medicalstockward.title                                                     = Duka la madawa la Idara
 angal.medicalstockward.to                                                        = Hadi
 angal.medicalstockward.units                                                     = Units
