--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -784,6 +784,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <请选择一个病房>
 angal.medicalstockward.sex                                                       = Sex
 angal.medicalstockward.stockcard                                                 = StockCard
+angal.medicalstockward.stockledger                                               = Stock Ledger
 angal.medicalstockward.title                                                     = WardPharmacy
 angal.medicalstockward.to                                                        = To
 angal.medicalstockward.units                                                     = Units
