--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -841,6 +841,7 @@ angal.medicalstockward.reset                                                    
 angal.medicalstockward.selectaward                                               = <selectionnez un département>
 angal.medicalstockward.sex                                                       = Sexe
 angal.medicalstockward.stockcard                                                 = BinCard
+angal.medicalstockward.stockledger                                               = Registre des stocks
 angal.medicalstockward.title                                                     = Garde Pharmacie
 angal.medicalstockward.to                                                        = A
 angal.medicalstockward.units                                                     = Units
