Adding window's title

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1781,6 +1781,7 @@ angal.visit.selectaward                                                         
 angal.visit.visitfor                                                             = Visits for
 angal.visit.visits                                                               = Visits
 angal.visit.visittomorrow                                                        = Visits Tomorrow
+angal.visit.worksheet                                                            = Worksheet
 angal.ward.beds                                                                  = BEDS
 angal.ward.bedsedit                                                              = Number of beds *
 angal.ward.bedsnumbermustbepositive                                              = Beds number must be positive
