--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1781,6 +1781,7 @@ angal.visit.selectaward                                                         
 angal.visit.visitfor                                                             = Visite per
 angal.visit.visits                                                               = Visite
 angal.visit.visittomorrow                                                        = Visite di domani
+angal.visit.worksheet                                                            = Foglio di lavoro
 angal.ward.beds                                                                  = LETTI
 angal.ward.bedsedit                                                              = Numero di Letti *
 angal.ward.bedsnumbermustbepositive                                              = Il numero dei letti deve essere positivo
