Fixed missing bundle key

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -311,6 +311,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = Reparto
 angal.dicom.delete.no                                                            = Núm
 angal.dicom.delete.request                                                       = óEstó seguro que desea eliminar este archivo?
 angal.dicom.delete.title                                                         = Confirmar Cancelación
