--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -316,6 +316,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = Reparto
 angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeproperty                = Un file nella cartella è troppo grande. Settare 'dicom.max.size' nel file dicom.properties
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Sei sicuro di voler eliminare il file?
@@ -1772,12 +1773,14 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Riprendi flusso
 angal.video.setfullscreen                                                        = Modalità schermo intero
 angal.video.shootaphoto                                                          = Scatta una foto
+angal.visit.durationinminutes                                                    = Durata (min)
 angal.visit.gotodate                                                             = Vai alla data
 angal.visit.nextabbr                                                             = Prox.
 angal.visit.previousabbr                                                         = Prec.
 angal.visit.printthisday                                                         = Stampa le visite di questo giorno
 angal.visit.reminderm                                                            = PROMEMORIA
 angal.visit.selectaward                                                          = Selezionare un reparto
+angal.visit.service                                                              = Prestazione
 angal.visit.visitfor                                                             = Visite per
 angal.visit.visits                                                               = Visite
 angal.visit.visittomorrow                                                        = Visite di domani
