--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -308,6 +308,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = Ward
 angal.dicom.delete.no                                                            = Não
 angal.dicom.delete.request                                                       = Tem certeza que deseja excluir o arquivo?
 angal.dicom.delete.title                                                         = Confirme a exclusão
