--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -308,6 +308,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = Wadi
 angal.dicom.delete.no                                                            = Hapana
 angal.dicom.delete.request                                                       = Una uhakika unataka kufuta faili?
 angal.dicom.delete.title                                                         = Thibitisha kufuta
