--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -286,6 +286,7 @@ angal.common.to                                                                 
 angal.common.today                                                               = Today
 angal.common.todaym                                                              = TODAY:
 angal.common.uom.kg                                                              = kg
+angal.common.ward                                                                = Ward
 angal.dicom.delete.no                                                            = No
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
