--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -310,6 +310,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = جناح
 angal.dicom.delete.no                                                            = لا
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
