--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -313,6 +313,7 @@ angal.common.uom.mgdl                                                           
 angal.common.uom.milliliter                                                      = ml
 angal.common.uom.mmHg                                                            = mmHg
 angal.common.uom.percentage                                                      = %
+angal.common.ward                                                                = Reaccouchement
 angal.dicom.delete.no                                                            = Non
 angal.dicom.delete.request                                                       = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                         = Confirm delete
