OP-360 Fixed patient selection (replicating patient bill behaviour)

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -1706,6 +1706,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = استئناف تيار
 angal.video.setfullscreen                                                        = تعيين وضع ملء الشاشة
 angal.video.shootaphoto                                                          = التقاط صورة
+angal.visit.changepatient                                                        = تغيير المريض
+angal.visit.pickpatient                                                          = البحث عن مريض...
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.selectaward                                                          = اختر جناح
 angal.visit.visits                                                               = زيارات
