--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -1683,6 +1683,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Resume stream
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
+angal.visit.changepatient                                                        = Change Patient
+angal.visit.pickpatient                                                          = find Patient...
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.selectaward                                                          = Bitte wählen Sie eine Station
 angal.visit.visits                                                               = Visits
