--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1773,9 +1773,11 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Resume stream
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
+angal.visit.changepatient                                                        = Change Patient
 angal.visit.durationinminutes                                                    = Duration (Min)
 angal.visit.gotodate                                                             = Go to date
 angal.visit.nextabbr                                                             = Next
+angal.visit.pickpatient                                                          = find Patient...
 angal.visit.previousabbr                                                         = Prev.
 angal.visit.printthisday                                                         = Print this day's visits
 angal.visit.reminderm                                                            = REMINDER
