--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1685,6 +1685,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Retomar flujo
 angal.video.setfullscreen                                                        = Modalidad pantalla completa
 angal.video.shootaphoto                                                          = Tome una foto
+angal.visit.changepatient                                                        = Cambiar Paciente
+angal.visit.pickpatient                                                          = Asociar Paciente
 angal.visit.reminderm                                                            = RECORDATORIO
 angal.visit.selectaward                                                          = Seleccionar un reparto
 angal.visit.visits                                                               = Visitas
