--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1713,6 +1713,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Reprendre video
 angal.video.setfullscreen                                                        = Modalitè a tout écran
 angal.video.shootaphoto                                                          = Faire une photo
+angal.visit.changepatient                                                        = Changez Patient
+angal.visit.pickpatient                                                          = Trouvez Patient...
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.selectaward                                                          = Selectionnez un département
 angal.visit.visits                                                               = Visits
