--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1773,9 +1773,11 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Riprendi flusso
 angal.video.setfullscreen                                                        = Modalità schermo intero
 angal.video.shootaphoto                                                          = Scatta una foto
+angal.visit.changepatient                                                        = Cambia Paziente
 angal.visit.durationinminutes                                                    = Durata (min)
 angal.visit.gotodate                                                             = Vai alla data
 angal.visit.nextabbr                                                             = Prox.
+angal.visit.pickpatient                                                          = trova Paziente...
 angal.visit.previousabbr                                                         = Prec.
 angal.visit.printthisday                                                         = Stampa le visite di questo giorno
 angal.visit.reminderm                                                            = PROMEMORIA
