--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -1682,6 +1682,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Fluxo de currículo
 angal.video.setfullscreen                                                        = Modo de ecrã completo conjunto
 angal.video.shootaphoto                                                          = Tirar uma foto
+angal.visit.changepatient                                                        = Paciente de mudança
+angal.visit.pickpatient                                                          = Encontre o paciente...
 angal.visit.reminderm                                                            = LEMBRETE
 angal.visit.selectaward                                                          = Selecione uma ala
 angal.visit.visits                                                               = Visitas
