--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -1681,6 +1681,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Anzisha upya stream
 angal.video.setfullscreen                                                        = Weka hali ya skrini nzima
 angal.video.shootaphoto                                                          = Piga picha
+angal.visit.changepatient                                                        = Badilisha Mgonjwa
+angal.visit.pickpatient                                                          = tafuta Mgonjwa...
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.selectaward                                                          = Chagua iadara
 angal.visit.visits                                                               = Chunguzi
