--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -1631,6 +1631,8 @@ angal.video.resolution                                                          
 angal.video.resumestream                                                         = Resume stream
 angal.video.setfullscreen                                                        = Set fullscreen mode
 angal.video.shootaphoto                                                          = Take a picture
+angal.visit.changepatient                                                        = Change Patient
+angal.visit.pickpatient                                                          = find Patient...
 angal.visit.reminderm                                                            = REMINDER
 angal.visit.selectaward                                                          = 请选择一个病房
 angal.visit.visits                                                               = Visits
