OP-372 fixed OperationRow language dependence.

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1235,8 +1235,8 @@ angal.operation.selecttype                                                      
 angal.operation.type                                                             = Typologie
 angal.operation.typem                                                            = TYPOLOGIE
 angal.operationrowedit.cancel                                                    = Fermer
-angal.operationrowedit.new                                                       = Nouveauangal.operationrowedit.operation                                                 = Opération:
-angal.operationrowedit.operation                                                 = Typologie Intervention
+angal.operationrowedit.new                                                       = Nouveau 
+angal.operationrowedit.operation                                                 = Opération:
 angal.operationrowedit.remark                                                    = Remarques:
 angal.operationrowedit.result                                                    = Résultat :
 angal.operationrowedit.save                                                      = Enregistrer
