OP-372 Operation result list: Updated

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1286,7 +1286,7 @@ angal.operation.operationsbrowser                                               
 angal.operation.pleaseinsertacode                                                = Please insert a code
 angal.operation.pleaseinsertavaliddescription                                    = Please insert a valid description
 angal.operation.result.failure                                                   = Failure
-angal.operation.result.sucess                                                    = Success
+angal.operation.result.success                                                   = Success
 angal.operation.result.undefined                                                 = Unknown
 angal.operation.select                                                           = Select
 angal.operation.selecttype                                                       = Select type
