--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1228,7 +1228,7 @@ angal.operation.operationsbrowser                                               
 angal.operation.pleaseinsertacode                                                = Insérez un code
 angal.operation.pleaseinsertavaliddescription                                    = Insérez une description valide
 angal.operation.result.failure                                                   = Échec
-angal.operation.result.sucess                                                    = Succès
+angal.operation.result.success                                                   = Succès
 angal.operation.result.undefined                                                 = Indéterminé
 angal.operation.select                                                           = Sélectionnez
 angal.operation.selecttype                                                       = Sélectionnez typologie
