--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1286,7 +1286,7 @@ angal.operation.operationsbrowser                                               
 angal.operation.pleaseinsertacode                                                = Prego inserire un codice
 angal.operation.pleaseinsertavaliddescription                                    = Prego inserire una descrizione valida
 angal.operation.result.failure                                                   = Fallimento
-angal.operation.result.sucess                                                    = Successo
+angal.operation.result.success                                                   = Successo
 angal.operation.result.undefined                                                 = Incerto
 angal.operation.select                                                           = Seleziona
 angal.operation.selecttype                                                       = Seleziona Tipologia
