Fixed some bundles in the main menu

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1019,7 +1019,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Médicaments
 angal.menu.medicalsward                                                          = Pharmaceutical Stock Ward
 angal.menu.medstockmovtype                                                       = Typologie médicaments magasin
-angal.menu.menuitmebrowser                                                       = Liste éléments Menu
+angal.menu.menuitembrowser                                                       = Liste éléments Menu
+angal.menu.menuitemmainmenu                                                      = Menu Principal
 angal.menu.name                                                                  = Nom
 angal.menu.newbill                                                               = New Bill
 angal.menu.newgrouprecord                                                        = Nouvelle voix de Groupe
