--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -1018,7 +1018,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = الفحوص الطبية
 angal.menu.medicalsward                                                          = جناح مخزن الادوية
 angal.menu.medstockmovtype                                                       = حركة مخزن العلاجات
-angal.menu.menuitmebrowser                                                       = متصفح قائمة الفقرات
+angal.menu.menuitembrowser                                                       = متصفح قائمة الفقرات
+angal.menu.menuitemmainmenu                                                      = القائمة الرئيسية
 angal.menu.name                                                                  = الاسم
 angal.menu.newbill                                                               = فاتورة جديدة
 angal.menu.newgrouprecord                                                        = سجل مجموعة جديدة
