--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -1013,7 +1013,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Medikamente
 angal.menu.medicalsward                                                          = Pharmaceutical Stock Ward
 angal.menu.medstockmovtype                                                       = Tipologie Movimenti Farmaci Magazzino
-angal.menu.menuitmebrowser                                                       = Menü Elementenliste
+angal.menu.menuitembrowser                                                       = Menü Elementenliste
+angal.menu.menuitemmainmenu                                                      = Hauptmenü
 angal.menu.name                                                                  = Name
 angal.menu.newbill                                                               = New Bill
 angal.menu.newgrouprecord                                                        = Neuer Gruppeneintrag
