--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1015,7 +1015,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Fármacos
 angal.menu.medicalsward                                                          = Almacén Fármacos Reparto
 angal.menu.medstockmovtype                                                       = Tipologías Movimientos Fármacos Almacén
-angal.menu.menuitmebrowser                                                       = Lista Elementos Menu
+angal.menu.menuitembrowser                                                       = Lista Elementos Menu
+angal.menu.menuitemmainmenu                                                      = Menù Principal
 angal.menu.name                                                                  = NOMBRE
 angal.menu.newbill                                                               = Nueva Factura
 angal.menu.newgrouprecord                                                        = Nueva expresión  de Grupo
