--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -1012,7 +1012,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Médico Otorrinolaringologista
 angal.menu.medicalsward                                                          = Farmacêutica estoque Ward
 angal.menu.medstockmovtype                                                       = MedicalsStock Mov
-angal.menu.menuitmebrowser                                                       = Menu Item Browser
+angal.menu.menuitembrowser                                                       = Menu Item Browser
+angal.menu.menuitemmainmenu                                                      = Menu Principal
 angal.menu.name                                                                  = Nome
 angal.menu.newbill                                                               = Novo projeto de lei
 angal.menu.newgrouprecord                                                        = Novo registro de grupo
