--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -1012,7 +1012,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Matibabu
 angal.menu.medicalsward                                                          = usambazaji wa Madawa ya Idara
 angal.menu.medstockmovtype                                                       = Hifadhi ya dawa Mov
-angal.menu.menuitmebrowser                                                       = Kupitiapitia menyu ya vitu
+angal.menu.menuitembrowser                                                       = Kupitiapitia menyu ya vitu
+angal.menu.menuitemmainmenu                                                      = Menyu kuu
 angal.menu.name                                                                  = Majina
 angal.menu.newbill                                                               = Ankara jipya
 angal.menu.newgrouprecord                                                        = Rekodi ya kikundi kipya
