--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -961,7 +961,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Medicals
 angal.menu.medicalsward                                                          = Pharmaceutical Stock Ward
 angal.menu.medstockmovtype                                                       = MedicalsStock Mov
-angal.menu.menuitmebrowser                                                       = Menu Item Browser
+angal.menu.menuitembrowser                                                       = Menu Item Browser
+angal.menu.menuitemmainmenu                                                      = 主菜单
 angal.menu.name                                                                  = Name
 angal.menu.newbill                                                               = New Bill
 angal.menu.newgrouprecord                                                        = New group record
