--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1076,7 +1076,8 @@ angal.menu.medicalstock                                                         
 angal.menu.medicalstype                                                          = Farmaci
 angal.menu.medicalsward                                                          = Magazzino Farmaci Reparto
 angal.menu.medstockmovtype                                                       = Tipologie Movimenti Farmaci Magazzino
-angal.menu.menuitmebrowser                                                       = Lista Elementi Menu
+angal.menu.menuitembrowser                                                       = Lista Elementi Menu
+angal.menu.menuitemmainmenu                                                      = Menù Principale
 angal.menu.name                                                                  = NOME
 angal.menu.newbill                                                               = Nuovo Conto
 angal.menu.newgrouprecord                                                        = Nuova voce di Gruppo
