Fix error message on multiple selection

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -253,6 +253,7 @@ angal.billbrowser.pleaseselectabillfirst                                        
 angal.billbrowser.pleaseselectamonth                                             = Please select a month
 angal.billbrowser.pleaseselectapatient                                           = Please select a patient
 angal.billbrowser.pleaseselectareport                                            = Please select a report
+angal.billbrowser.pleaseselectonebillonly                                        = Please select one Bill only
 angal.billbrowser.receipt                                                        = Receipt
 angal.billbrowser.report                                                         = Report
 angal.billbrowser.shortreportonlybaddebts                                        = Short Report (only BadDebts bills)
