--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -250,6 +250,7 @@ angal.billbrowser.pleaseselectabillfirst                                        
 angal.billbrowser.pleaseselectamonth                                             = Seleccionar un mes
 angal.billbrowser.pleaseselectapatient                                           = Seleccionar un paciente
 angal.billbrowser.pleaseselectareport                                            = Seleccionar un informe
+angal.billbrowser.pleaseselectonebillonly                                        = Seleccionar solo una cuenta
 angal.billbrowser.receipt                                                        = Recibo
 angal.billbrowser.report                                                         = Informe
 angal.billbrowser.shortreportonlybaddebts                                        = Informe breve (solo facturas BadDebts)
