--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -252,6 +252,7 @@ angal.billbrowser.pleaseselectabillfirst                                        
 angal.billbrowser.pleaseselectamonth                                             = Selectionnez un mois
 angal.billbrowser.pleaseselectapatient                                           = Please select a patient
 angal.billbrowser.pleaseselectareport                                            = Selectionnez un report
+angal.billbrowser.pleaseselectonebillonly                                        = Avant selectionnez une seule facture
 angal.billbrowser.receipt                                                        = Reçu
 angal.billbrowser.report                                                         = Rapport
 angal.billbrowser.shortreportonlybaddebts                                        = Brief Rapport (seulement  BadDebts factures)
