--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -253,6 +253,7 @@ angal.billbrowser.pleaseselectabillfirst                                        
 angal.billbrowser.pleaseselectamonth                                             = Selezionare un mese
 angal.billbrowser.pleaseselectapatient                                           = Selezionare un paziente
 angal.billbrowser.pleaseselectareport                                            = Selezionare un report
+angal.billbrowser.pleaseselectonebillonly                                        = Selezionare solo un conto
 angal.billbrowser.receipt                                                        = Ricevuta
 angal.billbrowser.report                                                         = Report
 angal.billbrowser.shortreportonlybaddebts                                        = Report breve (solo ricevute BadDebts)
