Edit Bill: same behavior on all tabs

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -265,6 +265,7 @@ angal.billbrowser.today                                                         
 angal.billbrowser.todayclosure                                                   = Today (closure)
 angal.billbrowser.todaym                                                         = TODAY:
 angal.billbrowser.update                                                         = Update
+angal.billbrowser.youcannoteditaclosedbill                                       = You cannot edit a closed bill (Admin can)
 angal.common.agepattern                                                          = {0}y {1}m {2}d
 angal.common.cancel                                                              = Cancel
 angal.common.close                                                               = Close
