--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -262,6 +262,7 @@ angal.billbrowser.today                                                         
 angal.billbrowser.todayclosure                                                   = Hoy (cerrado)
 angal.billbrowser.todaym                                                         = HOY:
 angal.billbrowser.update                                                         = Actualizada
+angal.billbrowser.youcannoteditaclosedbill                                       = No puede editar una factura cerrada (Admin puede)
 angal.common.agepattern                                                          = {0}aa {1}mm {2}dd
 angal.common.cancel                                                              = Anular
 angal.common.close                                                               = Cerrar
