--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -264,6 +264,7 @@ angal.billbrowser.today                                                         
 angal.billbrowser.todayclosure                                                   = aujourd'hui (fermeture)
 angal.billbrowser.todaym                                                         = A'HUI:
 angal.billbrowser.update                                                         = à jour
+angal.billbrowser.youcannoteditaclosedbill                                       = Vous ne pouvez pas modifier une facture fermée (Administrateur peut)
 angal.common.agepattern                                                          = {0}y {1}m {2}d
 angal.common.cancel                                                              = Annuler
 angal.common.close                                                               = Fermez
