--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -265,6 +265,7 @@ angal.billbrowser.today                                                         
 angal.billbrowser.todayclosure                                                   = Oggi (chiusura)
 angal.billbrowser.todaym                                                         = OGGI:
 angal.billbrowser.update                                                         = Aggiornata
+angal.billbrowser.youcannoteditaclosedbill                                       = Non puoi modificare un bill chiuso (Admin può)
 angal.common.agepattern                                                          = {0}a {1}m {2}g
 angal.common.cancel                                                              = Annulla
 angal.common.close                                                               = Chiudi
